tests/invalid_run/ini/ini02.java
class Main {
    static void run() {
        int b;
        int a;
        a = b;
    }
}
